--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/add_permission.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/add_permission.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE HTML>
+﻿<!--_meta 作为公共模版分离出去-->
+<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,59 +7,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-
-    <script src="../../Content/jquery-3.1.1.js"></script>
-
-
-    <title>添加管理员 - 管理员管理 - H-ui.admin v3.1</title>
-    <meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-    <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
+    <link rel="Bookmark" href="/favicon.ico">
+    <link rel="Shortcut Icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="static/h-ui/css/H-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/H-ui.admin.css" />
+    <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css" />
+    <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
+    <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
 </head>
 <body>
+    <article class="page-container">
+        <form action="" method="post" class="form form-horizontal" id="formData">
+            <div class="row cl">
+                <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>权限名称：</label>
+                <div class="formControls col-xs-8 col-sm-9">
+                    <input type="text" class="input-text" value="" placeholder="" id="roleName" name="Permission_Name">
+                </div>
+            </div>
+            <div class="row cl">
+                <label class="form-label col-xs-4 col-sm-3">权限Url：</label>
+                <div class="formControls col-xs-8 col-sm-9">
+                    <input type="text" class="input-text" value="" placeholder="" id="" name="Permission_Url">
+                </div>
+            </div>
+            <div class="row cl">
+                <label class="form-label col-xs-4 col-sm-3">是否启用：</label>
+                <div class="formControls col-xs-8 col-sm-9">
+                    <input id="Radio1" type="radio" value="1" name="Permission_Enabel" checked="checked"/>是
+                    <input id="Radio1" type="radio" value="0" name="Permission_Enabel"/>否
+                </div>
+            </div>
+            <div class="row cl">
+                <label class="form-label col-xs-4 col-sm-3">备注：</label>
+                <div class="formControls col-xs-8 col-sm-9">
+                    <input type="text" class="input-text" value="" placeholder="" id="" name="Permission_Remark">
+                </div>
+            </div>
+            <div class="row cl">
+                <label class="form-label col-xs-4 col-sm-3">是否是父节点：</label>
+                <div class="formControls col-xs-8 col-sm-9">
+                    <input id="rdIsPid" type="radio" value="1" name="isPid"/>是
+                    <input id="rdNoPid" type="radio" value="0" name="isPid" checked="checked"/>否
+                </div>
+            </div>
+            <div id="pIdShow" class="row cl" hidden="hidden">
+                <label class="form-label col-xs-4 col-sm-3">父节点：</label>
+                <div class="formControls col-xs-8 col-sm-9">
+                    <select id="sPid">
+                        <option value="0">请选择</option>
 
-    <form class="form form-horizontal" id="formData">
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red"></span>权限名称：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" name="permission_Name">
+                    </select>
+                </div>
             </div>
-        </div>
-        <div>
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red"></span>URL：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" name="permission_Url">
+            <input id="tPid" value="0" type="text" name="pID"/>
+            <div class="row cl">
+                <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
+                    <button type="button" class="btn btn-success radius" id="btnAdd" name="admin-role-save"><i class="icon-ok"></i> 确定</button>
+                </div>
             </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3">备注：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <textarea name="remark" class="textarea" placeholder="说点什么...100个字符以内" dragonfly="true" onKeyUp="$.Huitextarealength(this,100)"></textarea>
-
-            </div>
-        </div>
-        <div class="row cl">
-            <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
-                <input class="btn btn-primary radius" type="button" onclick="add()" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
-            </div>
-        </div>
-    </form>
+        </form>
+    </article>
 </body>
 </html>
-<script>
-    function add() {
-        $.ajax({
-            url: "http://localhost:8092/Dwelling/addPermission",
-            type: "post",
-            data: $("#formData").serialize(),
-            success: function (data) {
-                if (data > 0) {
-                    alert("添加权限成功");
-                    location.href ="/H-ui.admin/admin-permission.html"
+
+    <!--_footer 作为公共模版分离出去-->
+    <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
+    <script type="text/javascript" src="static/h-ui/js/H-ui.min.js"></script>
+    <script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
+    <!--请在下方写此页面业务相关的脚本-->
+    <script type="text/javascript" src="lib/jquery.validation/1.14.0/jquery.validate.js"></script>
+    <script type="text/javascript" src="lib/jquery.validation/1.14.0/validate-methods.js"></script>
+    <script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.js"></script>
+    <script>
+        $(function () {
+            $("[name=isPid]").click(function () {
+                if ($("[name=isPid]:checked").val() == "1") {
+                    $("#pIdShow").show();
                 }
                 else {
-                    alert("添加失败");
+                    $("#pIdShow").hide();
                 }
-            }
+            })
+            //获得权限父节点
+            $.ajax({
+                url: "http://localhost:8092/Dwelling/GetPermissionPid",
+                type: "get",
+                success: function (data) {
+                    $(data).each(function (index,data) {
+                        $("#sPid").append("<option value='" + data.Permission_ID + "'>" + data.Permission_Name + "</option>")
+                    })
+                }
+            })
+            //添加权限
+            $("#btnAdd").click(function () {
+                var pId = $("#sPid").val();
+                $("#tPid").val(pId);
+                $.ajax({
+                    url: "http://localhost:8092/Dwelling/AddPermission",
+                    type: "post",
+                    data: $("#formData").serialize(),
+                    success: function (i) {
+                        if (i > 0) {
+                            alert('添加成功！');
+                        }
+                    }
+                })
+            })
+
         })
-    }
-</script>
+
+        function add() {
+            $.ajax({
+                url: "http://localhost:8092/Dwelling/addPermission",
+                type: "post",
+                data: $("#formData").serialize(),
+                success: function (data) {
+                    if (data > 0) {
+                        alert("添加权限成功");
+                        location.href = "/H-ui.admin/admin-permission.html"
+                    }
+                    else {
+                        alert("添加失败");
+                    }
+                }
+            })
+        }
+    </script>
