--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role-add.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role-add.html
@@ -119,6 +119,7 @@
                                     })
                                 }
                                 alert('添加成功！');
+                                location.href = "admin-role.html";
                             }
                         })
 
