--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/index.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/index.html
@@ -67,59 +67,8 @@
         </div>
     </header>
     <aside class="Hui-aside">
-        <div class="menu_dropdown bk_2">
-            <dl id="menu-admin">
-                <dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-                <dd>
-                    <ul id="urlList">
-                        <li><a data-href="admin-list.html" data-title="管理员列表" href="javascript:void(0)">管理员列表</a></li>
-                        <li><a data-href="admin-add.html" data-title="添加管理员" href="javascript:void(0)">添加管理员</a></li>
-                        <li><a data-href="admin-role.html" data-title="角色管理" href="javascript:void(0)">角色管理</a></li>
-                        <li><a data-href="admin-permission.html" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
-                        <li><a data-href="admin-password-edit.html" data-title="管理员修改密码" href="javascript:void(0)">管理员修改密码</a></li>
-
-                    </ul>
-                </dd>
-            </dl>
-            <dl id="menu-product">
-                <dt><i class="Hui-iconfont">&#xe620;</i> 房源管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-                <dd>
-                    <ul>
-                        <li><a data-href="product-add.html" data-title="添加房源" href="javascript:void(0)">添加房源</a></li>
-                        <li><a data-href="product-brand.html" data-title="房源管理" href="javascript:void(0)">房源管理</a></li>
-                    </ul>
-                </dd>
-            </dl>
-            <dl id="menu-picture">
-                <dt><i class="Hui-iconfont">&#xe613;</i> 投诉建议管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-                <dd>
-                    <ul>
-                        <li><a data-href="feedback-list.html" data-title="投诉管理" href="javascript:void(0)">投诉管理</a></li>
-                        <li><a data-href="feedback-list.html" data-title="建议管理" href="javascript:void(0)">建议管理</a></li>
-                    </ul>
-                </dd>
-            </dl>
-            <dl id="menu-tongji">
-                <dt><i class="Hui-iconfont">&#xe61a;</i> 系统统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-                <dd>
-                    <ul>
-
-                        <li><a data-href="charts-4.html" data-title="柱状图" href="javascript:void(0)">柱状图</a></li>
-                        <li><a data-href="charts-5.html" data-title="饼状图" href="javascript:void(0)">饼状图</a></li>
-                        <li><a data-href="charts-6.html" data-title="3D柱状图" href="javascript:void(0)">3D柱状图</a></li>
-                        <li><a data-href="charts-7.html" data-title="3D饼状图" href="javascript:void(0)">3D饼状图</a></li>
-                    </ul>
-                </dd>
-            </dl>
-            <dl id="menu-comments">
-                <dt><i class="Hui-iconfont">&#xe622;</i> 评论管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-                <dd>
-                    <ul>
-                        <li><a data-href="http://h-ui.duoshuo.com/admin/" data-title="评论列表" href="javascript:;">评论列表</a></li>
-                        <li><a data-href="feedback-list.html" data-title="意见反馈" href="javascript:void(0)">意见反馈</a></li>
-                    </ul>
-                </dd>
-            </dl>
+        <div id="Permision_List" class="menu_dropdown bk_2">
+            
         </div>
     </aside>
     <div class="dislpayArrow hidden-xs"><a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a></div>
@@ -158,22 +107,25 @@
     <script type="text/javascript" src="lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
     <script type="text/javascript">
         $(function () {
-            alert(location.search.substr(4))
-            $.ajax({
-                url: "http://localhost:8092/Dwelling/GetAdminPermissionUrls",
-                type: "get",
-                data: {
-                    adminId: location.search.substr(4),
-                },
-
-                success: function (data) {
-                    $(data).each(function (index, data) {
-                        $("#urlList").append("<li><a data-href='" + data.Permission_Url + "' data-title='" + data.Permission_Name + "' href='javascript: void (0)'>" + data.Permission_Name + "</a></li>");
-                    })
-
-                }
-            })
-           
+            //$.ajax({
+            //    url: "http://localhost:8092/Dwelling/GetAdminPermissionUrls",
+            //    type: "get",
+            //    data: {
+            //        adminId: location.search.substr(4),
+            //    },
+            //    success: function (data) {
+            //        $(data).each(function (index, data) {
+            //            if (data.pID == 0) {
+            //                $("#Permision_List").append("<dl><dt>" + data.Permission_Name + "<i class=\"Hui-iconfont menu_dropdown-arrow\">&#xe6d5;</i></dt><dd><ul id=\"Permision" + data.Permission_ID +"\"></ul></dd></dl>");
+            //            }
+            //        })
+            //        $(data).each(function (index, data) {
+            //            if (data.pID != 0) {
+            //                $("#Permision" + data.pID).append("<li><a data-href='" + data.Permission_Url + "' data-title='" + data.Permission_Name + "' href='javascript: void (0)'>" + data.Permission_Name + "</a></li>");
+            //            }
+            //        })
+            //    }
+            //})
         })
     </script>
 </body>
