--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/add_permission.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/add_permission.html
@@ -59,7 +59,7 @@
                     </select>
                 </div>
             </div>
-            <input id="tPid" value="0" type="text" name="pID"/>
+            <input id="tPid" hidden="hidden" type="text" name="pID"/>
             <div class="row cl">
                 <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
                     <button type="button" class="btn btn-success radius" id="btnAdd" name="admin-role-save"><i class="icon-ok"></i> 确定</button>
